...
import at.uac.android.core.LocalStorage
import at.uac.android.feature.browse.PublicImage
import at.uac.android.feature.browse.displayTime
import at.uac.android.feature.browse.tr

data class AttendeesActions(
    val back: () -> Unit = {},
    val account: () -> Unit = {},
    val refresh: () -> Unit = {},
    val more: () -> Unit = {},
    val search: (String) -> Unit = {},
    val sort: (AttendeesSort) -> Unit = {},
)
...
